# DAG

./: .gitignore  CLAUDE.md  README.MD
outputs/det/2007_000925/: metrics.json
outputs/experiment/: summary.json
outputs/experiment/det/000032/: metrics.json
outputs/experiment/det/000033/: metrics.json
outputs/experiment/det/000039/: metrics.json
outputs/experiment/det/000042/: metrics.json
outputs/experiment/det/000061/: metrics.json
outputs/experiment/seg/000032/: metrics.json
outputs/experiment/seg/000033/: metrics.json
outputs/experiment/seg/000039/: metrics.json
outputs/experiment/seg/000042/: metrics.json
outputs/experiment/seg/000061/: metrics.json
outputs/longrun/det/000061/: metrics.json
outputs/longrun/seg/000061/: metrics.json
outputs/multi/det/000033/: metrics.json
outputs/multi/det/000042/: metrics.json
outputs/multi/det/000061/: metrics.json
outputs/multi/det/000063/: metrics.json
outputs/multi/det/000121/: metrics.json
outputs/seg/2011_003271/: metrics.json
python/: README.md  pyproject.toml  requirements.txt
python/configs/: det_voc.yaml  experiment.yaml  seg_voc.yaml
python/dag/: __init__.py  cli.py
python/dag/attacks/: __init__.py  detection.py  segmentation.py
python/dag/data/: __init__.py  targets.py  voc.py
python/dag/models/: __init__.py  detection.py  segmentation.py
python/dag/utils/: __init__.py  boxes.py  imaging.py  viz.py
python/scripts/: finetune_det_voc.py  run_batch.sh  run_experiment.py
python/tests/: conftest.py  test_attack_smoke.py  test_boxes.py  test_targets.py
(+5 files in other folders)
